@@ -5,3 +5,10 @@ LIBRARIES = \
     $(LIB_DIR)/$(LIB_PREFIX)pegprotocol$(LIB_SUFFIX) \
     $(LIB_DIR)/$(LIB_PREFIX)pegclient$(LIB_SUFFIX) \
     $(LIB_DIR)/$(LIB_PREFIX)slp$(LIB_SUFFIX)	
+
+DYNAMIC_LIBRARIES = \
+    -lpegcommon \
+    -lpegrepository \
+    -lpegprotocol \
+    -lpegclient \
+    -lslp
