@@ -13,6 +13,11 @@ LIBRARIES = \
     $(LIB_DIR)/$(LIB_PREFIX)pegrepository$(LIB_SUFFIX) \
     $(LIB_DIR)/$(LIB_PREFIX)pegprotocol$(LIB_SUFFIX) 
 
+DYNAMIC_LIBRARIES = \
+    -lpegcommon \
+    -lpegrepository \
+    -lpegprotocol
+
 PRE_DEPEND_INCLUDES = -I./depends
 
 SOURCES = \
