@@ -3,6 +3,8 @@ DIR = Pegasus/Common/tests/Service/BeeperService
 include $(ROOT)/mak/config.mak
 LIBRARIES = $(LIB_DIR)/$(LIB_PREFIX)pegcommon$(LIB_SUFFIX)
 
+DYNAMIC_LIBRARIES = -lpegcommon
+
 EXTRA_INCLUDES = $(SYS_INCLUDES)
 
 PROGRAM = TestBeeperService
