@@ -1,2 +1,3 @@
 ROOT=../../../../..
 LIBRARIES=$(LIB_DIR)/$(LIB_PREFIX)pegcommon$(LIB_SUFFIX)
+DYNAMIC_LIBRARIES=-lpegcommon
