@@ -29,6 +29,10 @@ LIBRARIES = \
     $(LIB_DIR)/$(LIB_PREFIX)pegcommon$(LIB_SUFFIX) \
     $(LIB_DIR)/$(LIB_PREFIX)pegrepository$(LIB_SUFFIX)
 
+DYNAMIC_LIBRARIES = \
+    -lpegcommon \
+    -lpegrepository
+
 PRE_DEPEND_INCLUDES = -I./depends
 
 SOURCES = cimmof_lex_wrapper.cpp cimmofParser.cpp cimmofMessages.cpp \
