@@ -3,3 +3,8 @@ LIBRARIES= \
     $(LIB_DIR)/$(LIB_PREFIX)pegcompiler$(LIB_SUFFIX) \
     $(LIB_DIR)/$(LIB_PREFIX)pegrepository$(LIB_SUFFIX) \
     $(LIB_DIR)/$(LIB_PREFIX)pegcommon$(LIB_SUFFIX)
+
+DYNAMIC_LIBRARIES= \
+    -lpegcompiler \
+    -lpegrepository \
+    -lpegcommon
