@@ -10,6 +10,8 @@ LOCAL_DEFINES = -DPEGASUS_PROTOCOL_INTERNAL
 
 LIBRARIES = $(LIB_DIR)/$(LIB_PREFIX)pegcommon$(LIB_SUFFIX)
 
+DYNAMIC_LIBRARIES = -lpegcommon
+
 LIBRARY = pegprotocol
 
 PRE_DEPEND_INCLUDES = -I./depends
