@@ -10,6 +10,8 @@ LOCAL_DEFINES = -DPEGASUS_PROVIDER_INTERNAL
 
 LIBRARIES = $(LIB_DIR)/$(LIB_PREFIX)pegcommon$(LIB_SUFFIX)
 
+DYNAMIC_LIBRARIES = -lpegcommon
+
 LIBRARY = pegprovider
 
 SOURCES = CIMProvider.cpp 
