@@ -1,3 +1,7 @@
 LIBRARIES = \
     $(LIB_DIR)/$(LIB_PREFIX)pegrepository$(LIB_SUFFIX) \
     $(LIB_DIR)/$(LIB_PREFIX)pegcommon$(LIB_SUFFIX)
+
+DYNAMIC_LIBRARIES = \
+    -lpegrepository \
+    -lpegcommon
