@@ -14,7 +14,9 @@ LOCAL_DEFINES = -DPEGASUS_GETOOPT_INTERNAL
 
 LIBRARY = peggetoopt
 
-LIBRARIES = $(LIB_DIR)/$(LIB_PREFIX)pegcommon$(LIB_SUFFIX) 
+LIBRARIES = $(LIB_DIR)/$(LIB_PREFIX)pegcommon$(LIB_SUFFIX)
+
+DYNAMIC_LIBRARIES = -lpegcommon
 
 PRE_DEPEND_INCLUDES = -I./depends
 
