@@ -12,10 +12,10 @@ LIBRARY = slp
 
 PRE_DEPEND_INCLUDES = -I./depends
 
-ifneq ($(PEGASUS_SUPPORTS_DYNLIB),yes)
 LIBRARIES = \
     $(LIB_DIR)/$(LIB_PREFIX)pegcommon$(LIB_SUFFIX) 
-endif
+
+DYNAMIC_LIBRARIES = -lpegcommon
 
 SOURCES = slp.cpp
 
