@@ -4,3 +4,9 @@ LIBRARIES = \
     $(LIB_DIR)/$(LIB_PREFIX)pegrepository$(LIB_SUFFIX) \
     $(LIB_DIR)/$(LIB_PREFIX)pegprotocol$(LIB_SUFFIX) \
     $(LIB_DIR)/$(LIB_PREFIX)pegclient$(LIB_SUFFIX)
+
+DYNAMIC_LIBRARIES = \
+    -lpegcommon \
+    -lpegrepository \
+    -lpegprotocol \
+    -lpegclient
